crates/lang-parse/tests/snapshots/parser__parser_tuple access.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xdfd4ec7577ae5a5f",
        output_hash: "0x3d759b446788925d",
        tree: (
            span: (
                start: 0,
                end: 7,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 7,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 7,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: ElementAccess((
                        span: (
                            start: 0,
                            end: 7,
                        ),
                        expr: SymbolPath((
                            span: (
                                start: 0,
                                end: 3,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            prefix: None,
                            parts: [
                                (
                                    span: (
                                        start: 0,
                                        end: 3,
                                    ),
                                    name: "foo",
                                ),
                            ],
                        )),
                        element_chain: [
                            (
                                span: (
                                    start: 3,
                                    end: 7,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                inner: Tuple((
                                    span: (
                                        start: 4,
                                        end: 7,
                                    ),
                                    name: "bar",
                                )),
                            ),
                        ],
                    )),
                )),
            ),
        ),
    ),
)
---
