crates/lang-parse/tests/snapshots/parser__parser_tuple.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x8624926d887628a0",
        output_hash: "0x942019cdd30cb3f4",
        tree: (
            span: (
                start: 0,
                end: 10,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 10,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 10,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Tuple((
                        span: (
                            start: 0,
                            end: 10,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        values: [
                            (
                                span: (
                                    start: 1,
                                    end: 2,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                id: None,
                                expr: Literal((
                                    span: (
                                        start: 1,
                                        end: 2,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    literal: Integer((
                                        span: (
                                            start: 1,
                                            end: 2,
                                        ),
                                        value: "1",
                                    )),
                                )),
                            ),
                            (
                                span: (
                                    start: 4,
                                    end: 9,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                id: None,
                                expr: BinaryOperation((
                                    span: (
                                        start: 4,
                                        end: 9,
                                    ),
                                    lhs: Literal((
                                        span: (
                                            start: 4,
                                            end: 6,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([
                                                Whitespace((" ")),
                                            ]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 4,
                                                end: 5,
                                            ),
                                            value: "1",
                                        )),
                                    )),
                                    op: (
                                        span: (
                                            start: 6,
                                            end: 7,
                                        ),
                                        value: Add,
                                    ),
                                    rhs: Literal((
                                        span: (
                                            start: 8,
                                            end: 9,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 8,
                                                end: 9,
                                            ),
                                            value: "1",
                                        )),
                                    )),
                                )),
                            ),
                        ],
                    )),
                )),
            ),
        ),
    ),
)
---
