crates/lang-parse/tests/snapshots/parser__parser_typed assignment.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xd776a29dfde959ac",
        output_hash: "0x1aaff49f23315be9",
        tree: (
            span: (
                start: 0,
                end: 20,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 20,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (LocalAssignment((
                        span: (
                            start: 0,
                            end: 19,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        id: (
                            span: (
                                start: 0,
                                end: 1,
                            ),
                            name: "a",
                        ),
                        ty: Some(Single((
                            span: (
                                start: 3,
                                end: 9,
                            ),
                            name: "Length",
                        ))),
                        expr: BinaryOperation((
                            span: (
                                start: 12,
                                end: 19,
                            ),
                            lhs: QualifiedName((
                                span: (
                                    start: 12,
                                    end: 13,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([
                                        Whitespace((" ")),
                                    ]),
                                ),
                                parts: [
                                    (
                                        span: (
                                            start: 12,
                                            end: 13,
                                        ),
                                        name: "b",
                                    ),
                                ],
                            )),
                            op: (
                                span: (
                                    start: 14,
                                    end: 15,
                                ),
                                value: Multiply,
                            ),
                            rhs: Literal((
                                span: (
                                    start: 16,
                                    end: 19,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Quantity((
                                    span: (
                                        start: 16,
                                        end: 19,
                                    ),
                                    value: 2.0,
                                    raw: "2",
                                    unit: (
                                        span: (
                                            start: 17,
                                            end: 19,
                                        ),
                                        name: "mm",
                                    ),
                                )),
                            )),
                        )),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
