crates/lang-parse/tests/snapshots/parser__parser_uname.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..6,
        statements: StatementList {
            span: 0..6,
            statements: [],
            tail: Some(
                UnaryOperation(
                    UnaryOperation {
                        span: 0..6,
                        operation: Not,
                        rhs: Identifier(
                            Identifier {
                                span: 1..6,
                                name: "input",
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
