crates/lang-parse/tests/snapshots/parser__parser_unary binary ops.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x76553d43dcb6a87e",
        output_hash: "0x44c15e712d6f103c",
        tree: (
            span: (
                start: 0,
                end: 11,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 11,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 11,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: BinaryOperation((
                        span: (
                            start: 0,
                            end: 11,
                        ),
                        lhs: UnaryOperation((
                            span: (
                                start: 0,
                                end: 5,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([
                                    Whitespace((" ")),
                                ]),
                            ),
                            op: (
                                span: (
                                    start: 0,
                                    end: 1,
                                ),
                                value: Minus,
                            ),
                            rhs: ArrayList((
                                span: (
                                    start: 1,
                                    end: 4,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                items: [
                                    (
                                        span: (
                                            start: 2,
                                            end: 3,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        expr: Literal((
                                            span: (
                                                start: 2,
                                                end: 3,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            literal: Integer((
                                                span: (
                                                    start: 2,
                                                    end: 3,
                                                ),
                                                value: 1,
                                                raw: "1",
                                            )),
                                        )),
                                    ),
                                ],
                                unit: None,
                            )),
                        )),
                        op: (
                            span: (
                                start: 5,
                                end: 7,
                            ),
                            value: NotEqual,
                        ),
                        rhs: ArrayList((
                            span: (
                                start: 8,
                                end: 11,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            items: [
                                (
                                    span: (
                                        start: 9,
                                        end: 10,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    expr: Literal((
                                        span: (
                                            start: 9,
                                            end: 10,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 9,
                                                end: 10,
                                            ),
                                            value: 1,
                                            raw: "1",
                                        )),
                                    )),
                                ),
                            ],
                            unit: None,
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
