crates/lang-parse/tests/snapshots/parser__parser_unclosed string.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---

---
  x Error: unclosed string | Source: 1:5
   ,-[/:1:5]
 1 | a = "unclosed string;
   :     ^^^^^^^^|^^^^^^^
   :             `-- unclosed string
 2 |     b = 1;
   `----
